--- a/src/css/2-form.css
+++ b/src/css/2-form.css
@@ -1,15 +1,14 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 .feedback-form {
   padding: 24px;
   display: flex;
   flex-direction: column;
   gap: 8px;
-  max-width: 360px;
-  color: #2e2f42;
-  font-family: Montserrat;
-  font-size: 16px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.64px;
 }
 
 .feedback-form label {
@@ -37,22 +36,36 @@
 }
 
 input {
+  max-width: 360px;
+  height: 40px;
   border-radius: 4px;
   border: 1px solid #808080;
-  /* height: 40px; */
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 8px;
+  color: #2e2f42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.64px;
 }
 
 textarea {
+  max-width: 360px;
   padding-top: 8px;
   padding-bottom: 8px;
   padding-left: 8px;
-  /* height: 80px; */
+  height: 80px;
   border-radius: 4px;
   border: 1px solid #808080;
   resize: none;
+  color: #2e2f42;
+  font-family: Montserrat;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.64px;
 }
 
 input:hover,
@@ -63,4 +76,9 @@ textarea:hover {
 input:active,
 textarea:active {
   border: 1px solid #808080;
+}
+
+input:focus-visible,
+textarea:focus-visible {
+  outline: unset;
 }
